--- a/.github/workflows/lab6_pipeline.yaml
+++ b/.github/workflows/lab6_pipeline.yaml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: Labs/API_Labs/Lab6/
+        working-directory: Abhinav_GithubActions_Lab6/
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
